--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 #for first instance
 VITE_API_URL = "https://be.hospital1.life-record.buildora.app/"
+# VITE_API_URL = "https://be.ehr.life-record.buildora.app/"
 
 # #for second instance
 # VITE_API_URL = "https://be.hospital2.life-record.buildora.app/"
